--- a/src/assets/sass/_forms.scss
+++ b/src/assets/sass/_forms.scss
@@ -42,7 +42,7 @@ form {
     }
 }
 
-.formSection {
+.projectSection {
     margin-bottom: 50px;
 
     &:last-child {
@@ -50,7 +50,7 @@ form {
     }
 }
 
-.inputGroup {
+.projectRow {
     padding: 5px 15px;
     display: flex;
     justify-content: space-between;
