changing status color to text color

--- a/src/assets/sass/_status-colors.scss
+++ b/src/assets/sass/_status-colors.scss
@@ -10,37 +10,37 @@ $conformityAvailable: #0f7001;
 $completed: #8ab047;
 
 .contractSigned {
-    background-color: $toContact;
+    color: $toContact;
 }
 
 .toContact {
-    background-color: $toContact;
+    color: $toContact;
 }
 
 .toPlan {
-    background-color: $toPlan;
+    color: $toPlan;
 }
 
 .proposalSent {
-    background-color: $proposalSent;
+    color: $proposalSent;
 }
 
 .planned {
-    background-color: $planned;
+    color: $planned;
 }
 
 .onHold {
-    background-color: $onHold;
+    color: $onHold;
 }
 
 .executed {
-    background-color: $executed;
+    color: $executed;
 }
 
 .reportAvailable {
-    background-color: $reportAvailable;
+    color: $reportAvailable;
 }
 
 .conformityAvailable {
-    background-color: $conformityAvailable;
+    color: $conformityAvailable;
 }
